k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
  labels:
    app.kubernetes.io/name: sample-app
    app.kubernetes.io/instance: sample-app
    app.kubernetes.io/component: namespace
    app.kubernetes.io/part-of: kubernetes-devops-template
    app.kubernetes.io/managed-by: kustomize
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
