k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  labels:
    app.kubernetes.io/name: sample-app
    app.kubernetes.io/instance: sample-app
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: sample-app
    app.kubernetes.io/instance: sample-app
